--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,12 @@
 steps:
-  - name: 'gcr.io/cloud-builders/npm'
+  - name: 'gcr.io/cloud-builders/yarn'
     args: ['install']
 
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'test']
+  - name: 'gcr.io/cloud-builders/yarn'
+    args: ['test']
 
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build']
+  - name: 'gcr.io/cloud-builders/yarn'
+    args: ['build']
 
   - name: 'gcr.io/$PROJECT_ID/firebase'
     args: ['deploy']
